--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "Documentation site for Formidable Charts",
   "main": "webpack.config.dev.js",
   "scripts": {
+    "dev": "webpack-dev-server --port 3000 --config node_modules/builder-docs-archetype/config/webpack/webpack.config.dev.js --history-api-fallback",
+    "preversion": "builder run npm:preversion",
+    "server-static-prod": "ecstatic --port 8080 --baseDir /open-source/formidable-charts build",
     "start": "builder run dev",
     "test": "builder run lint",
-    "dev": "webpack-dev-server --port 3000 --config node_modules/builder-docs-archetype/config/webpack/webpack.config.dev.js --history-api-fallback",
-    "update-project": "npm update formidable-charts && npm update victory-docs",
-    "server-static-prod": "ecstatic --port 8080 --baseDir /open-source/formidable-charts build",
-    "test-func-static-prod": "TEST_FUNC_BASE_DIR=/open-source/formidable-charts builder run test-func-static"
+    "test-func-static-prod": "TEST_FUNC_BASE_DIR=/open-source/formidable-charts builder run test-func-static",
+    "update-project": "npm update formidable-charts && npm update victory-docs"
   },
   "repository": {
     "type": "git",
@@ -22,14 +23,14 @@
   },
   "homepage": "https://github.com/FormidableLabs/formidable-charts-docs#readme",
   "devDependencies": {
-    "builder-docs-archetype-dev": "^4.1.1",
+    "builder-docs-archetype-dev": "^4.2.1",
     "react-docgen": "2.7.0"
   },
   "dependencies": {
     "anchorate": "^1.1.0",
     "babel-preset-stage-1": "^6.5.0",
     "builder": "^3.1.0",
-    "builder-docs-archetype": "^4.1.1",
+    "builder-docs-archetype": "^4.2.1",
     "chai": "^3.2.0",
     "ecology": "^1.6.0",
     "formidable-landers": "^5.1.1",
@@ -48,7 +49,7 @@
     "react-router-scroll": "^0.2.0",
     "sinon": "^1.17.2",
     "sinon-chai": "^2.8.0",
-    "victory-docs": "FormidableLabs/victory-docs",
-    "victory": "*"
+    "victory": "*",
+    "victory-docs": "FormidableLabs/victory-docs"
   }
 }
