--- a/package.json
+++ b/package.json
@@ -31,21 +31,20 @@
     "builder": "^3.1.0",
     "builder-docs-archetype": "^4.2.2",
     "chai": "^3.2.0",
-    "ecology": "^1.6.0",
+    "formidable-charts": "FormidableLabs/formidable-charts",
     "formidable-landers": "^5.1.1",
     "history": "~1.17.0",
     "lodash": "^4.6.1",
-    "marked": "^0.3.5",
     "mocha": "^2.3.3",
-    "prismjs": "^1.4.1",
+    "prismjs": "^1.5.1",
     "radium": "0.17.2",
     "react": "^15.1.0",
     "react-addons-test-utils": "^15.1.0",
     "react-document-meta": "^2.0.3",
     "react-dom": "^15.1.0",
     "react-ga": "^2.1.1",
-    "react-router": "^2.0.1",
-    "react-router-scroll": "^0.2.0",
+    "react-router": "^2.5.0",
+    "react-router-scroll": "^0.3.2",
     "sinon": "^1.17.2",
     "sinon-chai": "^2.8.0",
     "victory": "*",
