--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "builder": "^3.1.0",
     "builder-docs-archetype": "^4.2.2",
     "chai": "^3.2.0",
-    "formidable-charts": "FormidableLabs/formidable-charts",
+    "formidable-charts": "*",
     "formidable-landers": "^5.1.1",
     "history": "~1.17.0",
     "lodash": "^4.6.1",
