--- a/package.json
+++ b/package.json
@@ -22,15 +22,16 @@
   },
   "homepage": "https://github.com/FormidableLabs/formidable-charts-docs#readme",
   "devDependencies": {
-    "builder-docs-archetype-dev": "^4.2.2",
+    "builder-docs-archetype-dev": "^4.3.2",
     "react-docgen": "2.7.0"
   },
   "dependencies": {
     "anchorate": "^1.1.0",
     "babel-preset-stage-1": "^6.5.0",
     "builder": "^3.1.0",
-    "builder-docs-archetype": "^4.2.2",
+    "builder-docs-archetype": "^4.3.2",
     "chai": "^3.2.0",
+    "component-playground": "^1.3.1",
     "formidable-charts": "*",
     "formidable-landers": "^5.1.1",
     "history": "~1.17.0",
