--- a/package.json
+++ b/package.json
@@ -21,6 +21,12 @@
     "url": "https://github.com/FormidableLabs/formidable-charts-docs/issues"
   },
   "homepage": "https://github.com/FormidableLabs/formidable-charts-docs#readme",
+  "greenkeeper": {
+    "ignore": [
+      "history",
+      "radium"
+    ]
+  },
   "devDependencies": {
     "builder-docs-archetype-dev": "^4.2.2",
     "react-docgen": "2.12.1"
@@ -33,11 +39,11 @@
     "chai": "^3.2.0",
     "formidable-charts": "FormidableLabs/formidable-charts",
     "formidable-landers": "^5.1.1",
-    "history": "~4.4.0",
+    "history": "^3.0.0",
     "lodash": "^4.6.1",
     "mocha": "^3.1.2",
     "prismjs": "^1.5.1",
-    "radium": "0.18.1",
+    "radium": "0.17.2",
     "react": "^15.1.0",
     "react-addons-test-utils": "^15.1.0",
     "react-document-meta": "^2.0.3",
