--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "builder-docs-archetype": "^4.3.2",
     "chai": "^3.2.0",
     "component-playground": "^1.3.1",
-    "formidable-charts": "*",
+    "formidable-charts": "FormidableLabs/formidable-charts",
     "formidable-landers": "^5.1.1",
     "history": "^3.0.0",
     "lodash": "^4.6.1",
