--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "builder-docs-archetype": "^4.3.2",
     "chai": "^3.2.0",
     "component-playground": "^1.3.1",
-    "formidable-charts": "FormidableLabs/formidable-charts",
+    "formidable-charts": "0.0.6",
     "formidable-landers": "^5.1.1",
     "history": "^3.0.0",
     "lodash": "^4.6.1",
@@ -54,7 +54,7 @@
     "react-router-scroll": "^0.4.1",
     "sinon": "^1.17.2",
     "sinon-chai": "^2.8.0",
-    "victory": "*",
-    "victory-docs": "FormidableLabs/victory-docs"
+    "victory": "0.13.6",
+    "victory-docs": "1.2.0"
   }
 }
